# public-glms-for-ilms-in-sla

./: .gitignore  README.md  main.tex
codebase/: .gitignore  .pre-commit-config.yaml  CITATION.cff  Justfile  LICENSE  README.md  pyproject.toml
codebase/.github/workflows/: ci.yml
codebase/configs/common/: cloze.yaml  conditioning.yaml  data.yaml  eval.yaml  infer.yaml
codebase/configs/common/model/: bert-large-cased.yaml  glm-base.yaml  glm-roberta-large.yaml  gpt2.yaml
codebase/configs/common/train/: sft.yaml  (+1 more)
codebase/configs/e2e/: 01-ilm-main.yaml  02-glm-vanilla.yaml  03-nwp-prompt.yaml  04-nwp-lefttoright.yaml  05-mlm.yaml  06-l2errorloci.yaml  07-span-length.yaml  08-context-condition.yaml  09-training-regime.yaml  10-crosscorpus-transfer.yaml  full.yaml
codebase/configs/pipeline/: build-cloze.yaml  cluster-errprof.yaml  corrupt-context.yaml  download-data.yaml  errant-profile.yaml  evaluate.yaml  gec-clean.yaml  infer.yaml  plot-results.yaml  prepare-splits.yaml  train-ilm.yaml  train-sft.yaml  transfer-eval.yaml
codebase/docs/: data.md  evaluation.md  overview.md  reproducing-variants.md  training.md
codebase/docs/auto-docs/: non-training-benchmarks.md
codebase/samples/: efcamdat-smoke-100-canonical.csv  efcamdat-smoke-100.csv
codebase/scripts/: backfill_token_counts.py  build_final_tables.py  make_smoke_sample.py  rescore_em_variants.py  smoke_test.py
codebase/src/ilmcloze/: __init__.py  config.py
codebase/src/pipeline/: _cli.py  _config_common.py
codebase/tests/: conftest.py  test_cloze_format.py  test_config.py  test_context.py  test_em_variants.py  test_errant_profile.py  test_gap_sampler.py  test_metrics.py  test_token_counters.py  test_token_f1.py
(+114 files in other folders)
