[project]
name = "ilmcloze"
version = "0.1.0"
description = "Interlanguage Language Models for Learner Cloze Simulation — config-driven DAG"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Anonymous" }]
keywords = [
    "nlp",
    "cloze",
    "second-language-acquisition",
    "interlanguage",
    "language-models",
    "GLM",
    "CEFR",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "torch>=2.1",
    "transformers>=4.40",
    "tokenizers>=0.15",
    "datasets>=2.18",
    "accelerate>=0.27",
    "spacy>=3.7",
    "errant>=3.0.0",
    "nltk>=3.9",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6",
    "pytest>=8",
    "ipython>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ilmcloze", "src/pipeline"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src/ilmcloze", "src/pipeline"]

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "SIM", "C4", "RET", "PTH"]
ignore = ["PLR0913", "PLR2004"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"
pythonpath = ["src"]
